--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             line-height: 1.6;
 
           /* --- Updated Background Properties --- */
-            background-image: url('img/blue-bg.jpg');
+            background-image: url('/img/blue-bg.jpg');
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
