--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Visit Bihar - Launching Soon</title>
-    <meta name="description" content="Explore the beauty of Bihar.">
-    <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Visit Bihar" />
-    <meta property="og:title" content="Launching on 15th August, 2025." />
-    <meta property="og:description" content="Explore the beauty of Bihar." />
-    <meta property="og:image" content="https://tourism.bihar.gov.in/content/dam/bihar-tourism-aem/images/icons/BTIcon.png" />
-    <meta property="og:url" content="https://www.visitbihar.web.app" />
+    <title>Visit Bihar</title>
+    <!-- Open Graph (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.visitbihar.web.app">
+    <meta property="og:title" content="Visit Bihar">
+    <meta property="og:description" content="Explore the beauty of Bihar.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
